--- a/.github/workflows/deploy-room-manager.yaml
+++ b/.github/workflows/deploy-room-manager.yaml
@@ -28,6 +28,6 @@ jobs:
           -e PORT=8080 \
           -e PEERLESS_PURGE_TIMEOUT=600 \
           -e FISHJAM_URL=${{ secrets.ROOM_MANAGER_FISHJAM_URL }} \
-          -e FISHJAM_MANAGEMENT_TOKEN=${{ secrets.ROOM_MANAGER_FISHJAM_SERVER_TOKEN }} \
+          -e FISHJAM_SERVER_TOKEN=${{ secrets.ROOM_MANAGER_FISHJAM_SERVER_TOKEN }} \
           -e WEBHOOK_URL=${{ secrets.ROOM_MANAGER_WEBHOOK_URL }} \
           gh-runner-room-manager
