FCE-982 / don't minify the build output

--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -44,7 +44,7 @@
       "fishjam-openapi",
       "fishjam-proto"
     ],
-    "minify": true,
+    "minify": false,
     "format": [
       "cjs",
       "esm"
