--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "protos"]
+[submodule "packages/fishjam-proto/protos"]
 	path = packages/fishjam-proto/protos
 	url = https://github.com/fishjam-cloud/protos.git
