--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -40,7 +40,7 @@ jobs:
         run: yarn typecheck
 
       - name: Generate OpenAPI reference 📸
-        run: FISHJAM_ID="openapi" yarn gen:openapi ref.yaml
+        run: yarn gen:openapi ref.yaml
 
       - name: Compare OpenAPI reference 🔦
         run: |
