--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -52,8 +52,7 @@
     "outDir": "dist"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "websocket": "^1.0.35"
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@fishjam-cloud/fishjam-openapi": "workspace:*",
