--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -24,8 +24,7 @@
     "dist"
   ],
   "exports": {
-    ".": "./dist/index.js",
-    "./proto": "./dist/proto.js"
+    ".": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup --dts-resolve",
