--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -24,8 +24,7 @@
     "dist"
   ],
   "exports": {
-    ".": "./dist/index.js",
-    "./proto": "./dist/proto.js"
+    ".": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup --dts-resolve",
@@ -52,8 +51,7 @@
     "outDir": "dist"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "websocket": "^1.0.35"
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@fishjam-cloud/fishjam-openapi": "workspace:*",
