Update transcription demo

--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -51,7 +51,8 @@
     "outDir": "dist"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@fishjam-cloud/fishjam-openapi": "workspace:*",
@@ -59,6 +60,8 @@
     "@openapitools/openapi-generator-cli": "^2.18.4",
     "@types/node": "^22.13.16",
     "@types/websocket": "^1.0.10",
+    "eslint": "^9.33.0",
+    "prettier": "^3.6.2",
     "tsup": "^8.4.0",
     "typed-emitter": "^2.1.0"
   }
