--- a/examples/transcription/package.json
+++ b/examples/transcription/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write .",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
@@ -14,7 +15,8 @@
   },
   "devDependencies": {
     "@types/bun": "^1",
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prettier": "^3.6.2"
   },
   "module": "src/index.js"
 }
