--- a/examples/transcription/package.json
+++ b/examples/transcription/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "version": "1.0.50",
+  "name": "transcription-demo",
+  "version": "0.21.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write .",
