--- a/.github/workflows/build-and-test-room-manager-amd64.yaml
+++ b/.github/workflows/build-and-test-room-manager-amd64.yaml
@@ -40,7 +40,7 @@ jobs:
           --name gh-runner-room-manager \
           --restart always \
           -e PORT=8080 \
-          -e FISHJAM_URL=${{ vars.ROOM_MANAGER_FISHJAM_URL }} \
+          -e FISHJAM_ID=${{ vars.ROOM_MANAGER_FISHJAM_URL }} \
           -e FISHJAM_MANAGEMENT_TOKEN=${{ vars.ROOM_MANAGER_FISHJAM_SERVER_TOKEN }} \
           room-manager:${{ github.event.pull_request.head.sha }}
       - name: Test Room Manager Healtcheck
