--- a/examples/selective-subscription/backend/tsconfig.json
+++ b/examples/selective-subscription/backend/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "ES2022",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "types": ["bun-types"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    "jsx": "preserve"
   }
 }
