--- a/examples/selective-subscription/frontend/package.json
+++ b/examples/selective-subscription/frontend/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "selective-subscription-react",
+  "name": "selective-subscription-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -17,7 +18,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
-    "typescript": "~5.8.3",
-    "vite": "^7.1.7"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9"
   }
 }
