--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -24,6 +24,9 @@ jobs:
           node-version: 21
           cache: yarn
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+
       - name: Install dependencies
         run: yarn --immutable
 
