--- a/packages/js-server-sdk/tsconfig.json
+++ b/packages/js-server-sdk/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["es2023"],
     "module": "node16",
     "target": "es2022",
-
+    "resolveJsonModule": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
