build gemini integration

--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -38,6 +38,7 @@
   "tsup": {
     "entry": [
       "src/index.ts",
+      "src/integrations/gemini.ts",
       "src/proto.ts"
     ],
     "noExternal": [
