--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cspell": "^9.4.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "typedoc": "^0.28.1",
     "typedoc-material-theme": "^1.3.0",
@@ -27,5 +28,6 @@
     "docs": "typedoc",
     "spellcheck": "cspell '**/*.md' '**/*.mdx' '**/*.html' --exclude '**/api/**' --show-suggestions",
     "spellcheck:report": "yarn spellcheck --no-show-suggestions"
+    "prepare": "husky"
   }
 }
