--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "packageManager": "yarn@4.4.0",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "cspell": "^9.4.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
@@ -23,6 +24,8 @@
     "typecheck": "yarn workspaces foreach -A -p run typecheck",
     "format:check": "yarn workspaces foreach -A -p run format:check",
     "format": "yarn workspaces foreach -A -p run format",
-    "docs": "typedoc"
+    "docs": "typedoc",
+    "spellcheck": "cspell '**/*.md' '**/*.mdx' '**/*.html' --exclude '**/api/**' --show-suggestions",
+    "spellcheck:report": "yarn spellcheck --no-show-suggestions"
   }
 }
