--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -30,5 +30,10 @@
     "tsc": "^2.0.4",
     "tsx": "^4.19.3",
     "typescript": "~5.8.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ]
   }
 }
