--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cspell": "^9.4.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.5.3",
     "typedoc": "^0.28.1",
     "typedoc-material-theme": "^1.3.0",
@@ -26,6 +28,10 @@
     "format": "yarn workspaces foreach -A -p run format",
     "docs": "typedoc",
     "spellcheck": "cspell '**/*.md' '**/*.mdx' '**/*.html' --exclude '**/api/**' --show-suggestions",
-    "spellcheck:report": "yarn spellcheck --no-show-suggestions"
+    "spellcheck:report": "yarn spellcheck --no-show-suggestions",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,mjs,cjs,json,md,mdx,yaml,yml}": "prettier --write"
   }
 }
